tests/parsing/smtlib/v2.6/errors/072_declare-sort_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/072_declare-sort_bad_name_1.smt2", line 2, character 14-15:
2 | (declare-sort _)
                  ^
Error while parsing a sort declaration, read the reserved word '_',
      but expected a symbol for the sort name.
